# CappuccinoEngine

./: .gitignore  CMakeLists.txt  README.md  libraries.txt
CappuccinoEngine/: CMakeLists.txt
CappuccinoEngine/include/: engine.h
CappuccinoEngine/src/: main.cpp
include/: engine.h  input.h  renderer.h  rendererf.h  settings.h  window.h
res/: settings.ini
setup-files/Linux-Mac/: setup.sh
setup-files/Windows/: setup.bat
src/: engine.cpp  input.cpp  main.cpp  rendererf.cpp  settings.cpp  window.cpp
